# themplates

./: themplate.cabal  themplates.cabal
src/Text/: Themplate.hs  Themplates.hs
