Name:                themplate
Version:             0.0.1
Synopsis:            Allows upgrading a parser to a parser with splices.
Description:
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
Homepage:            http://github.com/mgsloan/themplate
Copyright:           Michael Sloan 2012
Category:            Template Haskell
Build-type:          Simple
Stability:           experimental
Cabal-version:       >=1.6
Bug-Reports:         http://github.com/mgsloan/themplate
Source-Repository head
  Type: git
  Location: git://github.com/mgsloan/

Library
  Hs-Source-Dirs:    src

  Exposed-modules:   Text.Themplate
  Extensions:        RankNTypes
  Build-depends:     base >= 3.0 && < 6,
                     containers,
                     parsec >= 3.0,
                     syb
  Ghc-options:       -Wall
